# cay

./: .cursorrules  .gitignore  CMakeLists.txt  Cay.csproj  INSTALL.md  README.md  test.txt
.github/workflows/: nightly.yml  release.yml
Cay/: AboutForm.cs  Cay.csproj  KeyboardHook.cs  Program.cs  README.md  TelexEngine.cs
openkey/: luu y.txt
openkey/Sources/OpenKey/win32/OpenKey/OpenKey/: OpenKey.vcxproj
scripts/: install-fcitx5.sh  install-local-test.sh  install-mac.sh  install-windows-arm.ps1  install-windows-classic.ps1  install-windows-full.ps1  install-windows.ps1  uninstall-fcitx5.sh  uninstall-mac.sh  uninstall-windows.ps1
src/: CayData.cs  CayEngine.cs  CayProcessor.cs  InputInjector.cs  KeyboardHookManager.cs  Program.cs  TiengViet.cs  TiengVietUtil.cs
src/core/: CayData.cpp  CayData.h  CayEngine.cpp  CayEngine.h  CayTypes.h
src/platform/android/: local.properties  settings.gradle.kts
src/platform/android/app/: build.gradle.kts
src/platform/android/app/src/main/: AndroidManifest.xml
src/platform/android/app/src/main/cpp/: CMakeLists.txt  telex_jni.cpp
src/platform/android/app/src/main/java/com/example/cayime/: CayIME.kt  PopupBubbleView.kt  SettingsActivity.kt  TelexEngine.kt
src/platform/android/app/src/main/res/drawable/: ic_capslock.xml  ic_emoji.xml  ic_globe.xml  ic_mic.xml  ic_shift.xml  ic_shift_filled.xml  key_bg.xml  key_bg_normal.xml  key_bg_pressed.xml  key_bg_selector.xml  key_special_bg_normal.xml  key_special_bg_pressed.xml  key_special_bg_selector.xml  popup_bg.xml  popup_item_bg.xml
src/platform/android/app/src/main/res/layout/: activity_settings.xml  keyboard_popup.xml  keyboard_view.xml  keyboard_view_emoji.xml  keyboard_view_numpad.xml  keyboard_view_symbols.xml
src/platform/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
src/platform/android/app/src/main/res/values-night/: colors.xml
src/platform/android/app/src/main/res/xml/: method.xml
src/platform/fcitx5/: CMakeLists.txt  CayimeAddonFactory.cpp  CayimeEngine.cpp  CayimeEngine.h  README_FCITX5.md  cayime-im.conf.in  cayime.conf.in.in
src/platform/macos/: AppDelegate.h  AppDelegate.mm  Info.plist.in  MacHookManager.h  MacHookManager.mm  MacInputInjector.h  MacInputInjector.mm
src/platform/windows/: InputInjector.cpp  InputInjector.h  KeyboardHookManager.cpp  main.cpp  no_crt.cpp
src/platform/windows/classic/byteio/: byteio.cpp  byteio.h
src/platform/windows/classic/newkey/: CayIntegration.cpp  NewKey.rc  about.cpp  about.h  button.cpp  button.h  encode.cpp  encode.h  expdlg.cpp  expdlg.h  font.cpp  font.h  keycons.h  keydlg.cpp  keydlg.h  keyhook.h  label.cpp  label.h  macrodlg.cpp  macrodlg.h  mactab.cpp  mactab.h  mainwnd.cpp  mainwnd.h  odmenu.cpp  odmenu.h  prehdr.cpp  prehdr.h  resource.h  smedit.cpp  smedit.h  tooldlg.cpp  tooldlg.h  ukmenu.cpp  ukmenu.h  userpref.cpp  userpref.h  util.cpp  util.h
src/platform/windows/classic/vnconv/: charset.cpp  charset.h  convert.cpp  data.cpp  data.h  docxio.cpp  docxio.h  error.cpp  miniz_export.h  pattern.cpp  pattern.h  stdafx.cpp  stdafx.h  vnconv.h
src/platform/windows/full/: ConfigManager.cpp  ConfigManager.h  cayy.rc  main_full.cpp  resource.h
src/platform/windows/minimal/: main.cpp
src/platform/windows/shared/: InputInjector.cpp  KeyboardHookManager.cpp  KeyboardHookManager.h
